# streamlit_tuto2

./: README.md  hello.py  pyproject.toml  requirements.txt
final_version/project/: final_project.py  final_project_basics.py  final_project_interactions.py
initial_version/exercices/streamlit_advanced_features/: advanced_features.py
initial_version/exercices/streamlit_basics/: basic.py
initial_version/exercices/streamlit_interactions/: interactions.py
initial_version/exercices/streamlit_visualizations/: visualizations.py
initial_version/project/: final_project.py  final_project_basics.py  final_project_interactions.py
