[project]
name = "streamlit-tuto2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.0.0",
    "setuptools>=75.8.2",
    "streamlit>=1.42.2",
    "yfinance>=0.2.54",
]
